# ai-agent-lab

./: .gitignore  README.md
classes/class01_foundation/: README.md
classes/class01_foundation/src/agent_foundation/agent/: react_agent.py  run.py
classes/class01_foundation/src/agent_foundation/tools/: create_ticket.py  search_kb.py
classes/class02_memory/: .gitignore
classes/class02_memory/src/agent_foundation/: __init__.py
classes/class02_memory/src/agent_foundation/agent/: memory_store.py  react_agent.py  run.py
classes/class03_embeddings/: README.md  pyproject.toml
classes/class03_embeddings/src/agent_foundation/agent/: callbacks.py  embedding_router.py  issue_types.py  kb_query_builder.py  prompts.py  prototypes.py  run.py
classes/class03_embeddings/src/agent_foundation/tools/: search_kb.py
classes/class04_langgrap/: pyproject.toml
classes/class04_langgrap/src/agent_foundation/agent/: graph.py  prompts.py  run.py  state.py
classes/class04_langgrap/src/agent_foundation/tools/: create_ticket.py
classes/class04_langgraph/: README.md  main.py
classes/class04_langgraph/src/agent_foundation/agent/: state.py
classes/class04_langgraph/src/agent_foundation/tools/: search_kb.py
classes/class05_rag/: README.md  pyproject.toml
classes/class05_rag/.faiss_index/: index.faiss  index.pkl
classes/class05_rag/src/agent_foundation/agent/: rag_agent.py  run.py
classes/class05_rag/src/agent_foundation/kb/: kb_data.py  kb_index.py
classes/class05_rag/src/agent_foundation/tools/: search_kb.py
classes/class06_decision/: README.md  pyproject.toml
classes/class06_decision/data/faiss_index/: index.faiss  index.pkl
classes/class06_decision/src/agent_foundation/agent/: clarify.py  graph.py  logger.py  prompts.py  query_normalize.py  run.py  state.py
classes/class06_decision/src/agent_foundation/kb/: kb_index.py
classes/class06_decision/src/agent_foundation/rag/: faiss_retriever.py  retriever_base.py
classes/class06_decision/src/agent_foundation/tools/: create_ticket.py
